playbooks/roles/k3s_setup/files/my-charts/rancher/rancher-deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cattle-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher
  namespace: cattle-system
  labels:
    app: rancher
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rancher
  template:
    metadata:
      labels:
        app: rancher
    spec:
      serviceAccountName: rancher
      # Master toleration YOK -> master taint'i sayesinde pod'lar worker'lara yerlesir.
      # podAntiAffinity (preferred): 2 replika mumkunse farkli worker'lara dagilir.
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - rancher
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: rancher
          image: rancher/rancher:v2.8.2
          imagePullPolicy: Always
          ports:
            - containerPort: 80
            - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: rancher
  namespace: cattle-system
spec:
  selector:
    app: rancher
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  type: ClusterIP
